--- a/Proyecto12/Proyecto12.csproj
+++ b/Proyecto12/Proyecto12.csproj
@@ -85,15 +85,19 @@
     <Compile Include="Assets\Scripts\Actividades\Tablero\LetraArrastrable.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Modos.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\ArmadorPalabras.cs" />
+    <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\CorrectorPalabrasTablero.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\MB_Cumulo.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\MB_Palabra.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\Palabra2.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\Palabras.cs" />
+    <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\SO_Tema.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\Variaciones.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Personaje.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\SlotLetra.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Tablero.cs" />
-    <Compile Include="Assets\Scripts\Datos\Pacientes.cs" />
+    <Compile Include="Assets\Scripts\Datos\EstadoTablero.cs" />
+    <Compile Include="Assets\Scripts\Datos\Paciente.cs" />
+    <Compile Include="Assets\Scripts\Datos\Sesion.cs" />
     <Compile Include="Assets\Scripts\NavegacionGeneral\Actividades.cs" />
     <Compile Include="Assets\Scripts\NavegacionGeneral\ElegirPaciente.cs" />
     <Compile Include="Assets\Scripts\NavegacionGeneral\ElegirPaciente2.cs" />
