--- a/Proyecto12/Proyecto12.csproj
+++ b/Proyecto12/Proyecto12.csproj
@@ -82,7 +82,6 @@
     <Compile Include="Assets\Scripts\Actividades\Tablero\CasilleroGrande.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Dado.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\EjercicioCasillero.cs" />
-    <Compile Include="Assets\Scripts\Actividades\Tablero\Modos.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\ArmadorPalabras.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\CorrectorPalabrasTablero.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\MB_Cumulo.cs" />
@@ -93,7 +92,6 @@
     <Compile Include="Assets\Scripts\Actividades\Tablero\Palabras\Variaciones.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Personaje.cs" />
     <Compile Include="Assets\Scripts\Actividades\Tablero\Tablero.cs" />
-    <Compile Include="Assets\Scripts\Datos\EstadoTablero.cs" />
     <Compile Include="Assets\Scripts\Datos\Paciente.cs" />
     <Compile Include="Assets\Scripts\Datos\Sesion.cs" />
     <Compile Include="Assets\Scripts\NavegacionGeneral\Actividades.cs" />
@@ -104,6 +102,7 @@
     <Compile Include="Assets\Scripts\UDateTime.cs" />
     <Compile Include="Assets\Scripts\UI\BotonElegirPaciente.cs" />
     <Compile Include="Assets\Scripts\UI\SelectorOr.cs" />
+    <Compile Include="Assets\Scripts\Utils\UtilsSO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
